--- a/data/ui/ask-rename.glade
+++ b/data/ui/ask-rename.glade
@@ -5,7 +5,7 @@
   <object class="GtkDialog" id="dlg">
     <property name="can_focus">False</property>
     <property name="border_width">10</property>
-    <property name="title" translatable="yes">Confirm to replace files</property>
+    <property name="title" translatable="yes">Confirm File Replacing</property>
     <property name="type_hint">normal</property>
     <child internal-child="vbox">
       <object class="GtkVBox" id="dialog-vbox">
@@ -226,7 +226,7 @@ Do you want to replace the existing file</property>
                         <property name="visible">True</property>
                         <property name="can_focus">False</property>
                         <property name="xalign">0</property>
-                        <property name="label" translatable="yes">_File Name:</property>
+                        <property name="label" translatable="yes">_File name:</property>
                         <property name="use_underline">True</property>
                         <property name="mnemonic_widget">filename</property>
                       </object>
