--- a/data/ui/app-chooser.glade
+++ b/data/ui/app-chooser.glade
@@ -25,30 +25,17 @@
             <property name="can_focus">False</property>
             <property name="spacing">12</property>
             <child>
-              <object class="GtkLabel" id="label7">
+              <object class="GtkLabel" id="file_type_header">
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
                 <property name="xpad">2</property>
                 <property name="ypad">2</property>
-                <property name="label" translatable="yes">&lt;b&gt;File type to be opened:&lt;/b&gt;</property>
                 <property name="use_markup">True</property>
-              </object>
-              <packing>
-                <property name="expand">False</property>
-                <property name="fill">False</property>
-                <property name="position">0</property>
-              </packing>
-            </child>
-            <child>
-              <object class="GtkLabel" id="file_type">
-                <property name="visible">True</property>
-                <property name="can_focus">False</property>
-                <property name="xalign">0</property>
               </object>
               <packing>
                 <property name="expand">True</property>
                 <property name="fill">True</property>
-                <property name="position">1</property>
+                <property name="position">0</property>
               </packing>
             </child>
           </object>
@@ -78,7 +65,8 @@
               <object class="GtkLabel" id="label2">
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
-                <property name="label" translatable="yes">_Installed Application</property>
+                <property name="tooltip_text" translatable="yes">Use selected application to open files</property>
+                <property name="label" translatable="yes">_Installed Applications</property>
                 <property name="use_underline">True</property>
               </object>
               <packing>
@@ -279,6 +267,7 @@
               <object class="GtkLabel" id="label3">
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
+                <property name="tooltip_text" translatable="yes">Execute custom command line to open files</property>
                 <property name="label" translatable="yes">C_ustom Command Line</property>
                 <property name="use_underline">True</property>
               </object>
@@ -295,20 +284,8 @@
           </packing>
         </child>
         <child>
-          <object class="GtkLabel" id="status">
-            <property name="visible">True</property>
-            <property name="can_focus">False</property>
-            <property name="xalign">0</property>
-          </object>
-          <packing>
-            <property name="expand">False</property>
-            <property name="fill">True</property>
-            <property name="position">2</property>
-          </packing>
-        </child>
-        <child>
           <object class="GtkCheckButton" id="set_default">
-            <property name="label" translatable="yes">_Set selected application as default action of this file type</property>
+            <property name="label" translatable="yes">_Set selected application as default action for this file type</property>
             <property name="visible">True</property>
             <property name="can_focus">True</property>
             <property name="receives_default">False</property>
@@ -319,7 +296,7 @@
           <packing>
             <property name="expand">False</property>
             <property name="fill">False</property>
-            <property name="position">3</property>
+            <property name="position">2</property>
           </packing>
         </child>
         <child internal-child="action_area">
@@ -365,7 +342,7 @@
             <property name="expand">False</property>
             <property name="fill">True</property>
             <property name="pack_type">end</property>
-            <property name="position">4</property>
+            <property name="position">3</property>
           </packing>
         </child>
       </object>
