--- a/data/ui/file-prop.glade
+++ b/data/ui/file-prop.glade
@@ -780,7 +780,6 @@
                     <child>
                       <object class="GtkCheckButton" id="hidden">
                         <property name="label" translatable="yes">Hidden file</property>
-                        <property name="visible">False</property>
                         <property name="sensitive">False</property>
                         <property name="can_focus">False</property>
                         <property name="receives_default">False</property>
@@ -864,7 +863,7 @@
         <col id="0" translatable="yes">None</col>
       </row>
       <row>
-        <col id="0" translatable="yes">Sticky</col>
+        <col id="0" translatable="yes" context="It is a directory access bit - &quot;sticky&quot; - where only owner can delete a file from it">Sticky</col>
       </row>
       <row>
         <col id="0" translatable="yes">Set GID</col>
@@ -887,7 +886,7 @@
         <col id="0" translatable="yes">None</col>
       </row>
       <row>
-        <col id="0" translatable="yes">Set UID</col>
+        <col id="0" translatable="yes" context="this is a file access mode bit, also known as &quot;suid&quot;">Set UID</col>
       </row>
       <row>
         <col id="0" translatable="yes">Set GID</col>
@@ -907,7 +906,7 @@
         <col id="0" translatable="yes">---</col>
       </row>
       <row>
-        <col id="0" translatable="yes">Only owner</col>
+        <col id="0" translatable="yes" context="this is a file access mode - only owner can access the file, for others access is denied">Only owner</col>
       </row>
       <row>
         <col id="0" translatable="yes">Only owner and group</col>
@@ -930,7 +929,7 @@
         <col id="0" translatable="yes">Nobody</col>
       </row>
       <row>
-        <col id="0" translatable="yes">Only owner</col>
+        <col id="0" translatable="yes" context="this is a file access mode - only owner can access the file, for others access is denied">Only owner</col>
       </row>
       <row>
         <col id="0" translatable="yes">Only owner and group</col>
