--- a/data/ui/file-prop.glade
+++ b/data/ui/file-prop.glade
@@ -309,7 +309,7 @@
                       <object class="GtkLabel" id="total_files_label">
                         <property name="can_focus">False</property>
                         <property name="xalign">0</property>
-                        <property name="label" translatable="yes">&lt;b&gt;Total files count:&lt;/b&gt;</property>
+                        <property name="label" translatable="yes">&lt;b&gt;Total count of files:&lt;/b&gt;</property>
                         <property name="use_markup">True</property>
                         <property name="use_underline">True</property>
                       </object>
