--- a/data/ui/app-chooser.glade
+++ b/data/ui/app-chooser.glade
@@ -97,6 +97,7 @@
                     <property name="label" translatable="yes">&lt;b&gt;C_ommand line to execute:&lt;/b&gt;</property>
                     <property name="use_markup">True</property>
                     <property name="use_underline">True</property>
+                    <property name="mnemonic_widget">cmdline</property>
                   </object>
                   <packing>
                     <property name="expand">False</property>
