--- a/data/ui/filesearch.glade
+++ b/data/ui/filesearch.glade
@@ -65,6 +65,7 @@
                 <property name="can_focus">True</property>
                 <property name="can_default">True</property>
                 <property name="has_default">True</property>
+                <property name="receives_default">False</property>
                 <property name="use_action_appearance">False</property>
                 <property name="use_stock">True</property>
               </object>
@@ -158,6 +159,7 @@
                 <property name="can_focus">True</property>
                 <property name="can_default">True</property>
                 <property name="has_default">True</property>
+                <property name="receives_default">False</property>
                 <property name="use_action_appearance">False</property>
                 <property name="use_stock">True</property>
               </object>
@@ -637,8 +639,8 @@
                           <object class="GtkEntry" id="content_entry">
                             <property name="visible">True</property>
                             <property name="can_focus">True</property>
-                            <property name="activates_default">True</property>
                             <property name="invisible_char">•</property>
+                            <property name="activates_default">True</property>
                             <property name="invisible_char_set">True</property>
                             <property name="primary_icon_activatable">False</property>
                             <property name="secondary_icon_activatable">False</property>
@@ -821,7 +823,7 @@
                           <object class="GtkComboBox" id="bigger_unit_combo">
                             <property name="visible">True</property>
                             <property name="sensitive">False</property>
-                            <property name="can_focus">False</property>
+                            <property name="can_focus">True</property>
                             <property name="model">bigger_liststore</property>
                             <property name="active">1</property>
                             <child>
@@ -841,7 +843,7 @@
                           <object class="GtkComboBox" id="smaller_unit_combo">
                             <property name="visible">True</property>
                             <property name="sensitive">False</property>
-                            <property name="can_focus">False</property>
+                            <property name="can_focus">True</property>
                             <property name="model">smaller_liststore</property>
                             <property name="active">2</property>
                             <child>
