--- a/data/ui/file-prop.glade
+++ b/data/ui/file-prop.glade
@@ -396,6 +396,7 @@
                         <property name="visible">True</property>
                         <property name="can_focus">True</property>
                         <property name="xalign">0</property>
+                        <property name="selectable">True</property>
                       </object>
                       <packing>
                         <property name="left_attach">2</property>
@@ -429,6 +430,7 @@
                         <property name="visible">True</property>
                         <property name="can_focus">True</property>
                         <property name="xalign">0</property>
+                        <property name="selectable">True</property>
                       </object>
                       <packing>
                         <property name="left_attach">2</property>
@@ -462,6 +464,7 @@
                         <property name="visible">True</property>
                         <property name="can_focus">True</property>
                         <property name="xalign">0</property>
+                        <property name="selectable">True</property>
                       </object>
                       <packing>
                         <property name="left_attach">2</property>
@@ -492,6 +495,7 @@
                       <object class="GtkLabel" id="ctime">
                         <property name="can_focus">True</property>
                         <property name="xalign">0</property>
+                        <property name="selectable">True</property>
                       </object>
                       <packing>
                         <property name="left_attach">2</property>
