Change the message contexts to comments
These are comments rather than contexts.

In addition, revise the comments.

--- a/data/ui/file-prop.glade
+++ b/data/ui/file-prop.glade
@@ -906,7 +906,7 @@
         <col id="0" translatable="yes">None</col>
       </row>
       <row>
-        <col id="0" translatable="yes" context="It is a directory access bit - 'sticky' - where only owner can delete a file from it">Sticky</col>
+        <col id="0" translatable="yes" comments="this is a directory access bit - only owner can delete a file from it">Sticky</col>
       </row>
       <row>
         <col id="0" translatable="yes">Set GID</col>
@@ -929,7 +929,7 @@
         <col id="0" translatable="yes">None</col>
       </row>
       <row>
-        <col id="0" translatable="yes" context="this is a file access mode bit, also known as 'suid'">Set UID</col>
+        <col id="0" translatable="yes" comments="this is a file access mode bit - executable files run with permissions of owner">Set UID</col>
       </row>
       <row>
         <col id="0" translatable="yes">Set GID</col>
@@ -949,7 +949,7 @@
         <col id="0" translatable="yes">---</col>
       </row>
       <row>
-        <col id="0" translatable="yes" context="this is a file access mode - only owner can access the file, for others access is denied">Only owner</col>
+        <col id="0" translatable="yes" comments="this is a file access mode - only owner can access the file, for others access is denied">Only owner</col>
       </row>
       <row>
         <col id="0" translatable="yes">Only owner and group</col>
@@ -972,7 +972,7 @@
         <col id="0" translatable="yes">Nobody</col>
       </row>
       <row>
-        <col id="0" translatable="yes" context="this is a file access mode - only owner can access the file, for others access is denied">Only owner</col>
+        <col id="0" translatable="yes" comments="this is a file access mode - only owner can access the file, for others access is denied">Only owner</col>
       </row>
       <row>
         <col id="0" translatable="yes">Only owner and group</col>
